[package]
name = "ridemap"
version = "0.0.1"
authors = ["G. Endignoux <ggendx@gmail.com>"]
license = "MIT"
repository = "https://github.com/gendx/ridemap"
readme = "README.md"
exclude = [".github/*"]
edition = "2021"
rust-version = "1.82.0"

[dependencies]
anyhow = "1.0.99"
cairo-rs = { version = "0.19.4", features = ["freetype"], optional = true }
clap = { version = "4.5.46", features = ["derive"] }
env_logger = "0.11.8"
futures = { version = "0.3.31", default-features = false, features = ["std", "async-await"] }
freetype-rs = { version = "0.35.0", optional = true }
gtk4 = { version = "0.8.2", optional = true }
image = { version = "0.24.9", default-features = false, features = ["png"] }
log = "0.4.27"
piston_window = { version = "0.131.0", optional = true }
piston2d-graphics = { version = "0.44.0", optional = true }
rand = "0.9.2"
regex = { version = "1.11.2", default-features = false, features = ["std"] }
reqwest = { version = "0.12.23", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
serde-xml-rs = "0.8.1"
tokio = { version = "1.47.1", features = ["rt-multi-thread"] }

[features]
default = ["backend_gtk4"]
backend_gtk4 = ["dep:gtk4", "dep:cairo-rs", "dep:freetype-rs"]
backend_piston = ["dep:piston_window", "dep:piston2d-graphics"]

[package.metadata.docs.rs]
rustdoc-args = ["--document-private-items"]
